<?xml version="1.0" encoding="utf-8"?>

<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_edit_schedule"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".CreateTrip.EditScheduleActivity">

        <include
            layout="@layout/toolbar_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <RelativeLayout
        android:id="@+id/content_frame_edit_schedule"
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        tools:context=".CreateTrip.EditScheduleActivity">

        <fragment
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.example.oose.routemaker.CreateTrip.EditScheduleDayFragment"
            android:id="@+id/edit_schedule_day_fragment"
            android:layout_alignParentTop="true"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_alignParentStart="true" />

        <fragment
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:name="com.example.oose.routemaker.CreateTrip.EditScheduleEventFragment"
            android:id="@+id/fragment_schedule_list"
            android:layout_below="@+id/edit_schedule_day_fragment" />

        <android.support.design.widget.FloatingActionButton android:id="@+id/fab_add_site"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:src="@android:drawable/ic_input_add"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginBottom="25dp"
            app:backgroundTint="@color/dark_red"
            android:tint="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp" />



    </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:scrollbars="none"
                android:layout_toLeftOf="@+id/button_view_map">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/drive_button_message"
                        android:background="@drawable/transport_button"
                        android:id="@+id/button_drive"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/walk_button_message"
                        android:background="@drawable/transport_button"
                        android:id="@+id/button_walk"
                        android:layout_toRightOf="@+id/button_drive"
                        android:layout_toEndOf="@+id/button_drive"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/bike_button_message"
                        android:background="@drawable/transport_button"
                        android:id="@+id/button_bike"
                        android:layout_toRightOf="@+id/button_walk"
                        android:layout_toEndOf="@+id/button_walk"/>

<!--
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/transit_button_message"
                        android:background="@drawable/transport_button"
                        android:id="@+id/button_transit"
                        android:layout_toRightOf="@+id/button_bike"
                        android:layout_toEndOf="@+id/button_bike"/>
-->

                </RelativeLayout>



            </HorizontalScrollView>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/view_map_message"
                android:background="@drawable/button_general"
                android:id="@+id/button_view_map"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@+id/button_finalize" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/finalize_message"
                android:background="@drawable/button_general"
                android:id="@+id/button_finalize"
                android:layout_alignParentRight="true"/>


        </RelativeLayout>


    </RelativeLayout>

    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         The drawer is given a fixed width in dp and extends the full height of
         the container. A solid background is used for contrast
         with the content view. -->
    <include
        layout="@layout/drawer_view"
        android:id="@+id/left_drawer_edit_schedule"
        android:layout_width="200dp"
        android:layout_height="fill_parent"
        android:layout_gravity="start"
        android:layout_marginTop="?attr/actionBarSize"/>
</android.support.v4.widget.DrawerLayout>
