<?xml version="1.0" encoding="utf-8"?>

<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout_create_confirm"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".CreateTrip.CreateConfirmActivity">

        <include
            layout="@layout/toolbar_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical"
            android:id="@+id/layout_confirm_activity">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/schedule_created_message"
                    android:textSize="22dp"
                    android:layout_gravity="center"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:id="@+id/layout_send_email"
                android:background="@color/colorAccent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_button_message"
                    android:id="@+id/button_send_email"
                    android:layout_gravity="center" />
            </FrameLayout>

            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:id="@+id/layout_return"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@color/white"
                android:layout_gravity="bottom">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/return_button_message"
                    android:id="@+id/button_return"
                    android:layout_gravity="center" />
            </FrameLayout>

    </LinearLayout>

    </RelativeLayout>

    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         The drawer is given a fixed width in dp and extends the full height of
         the container. A solid background is used for contrast
         with the content view. -->
    <include
        layout="@layout/drawer_view"
        android:id="@+id/left_drawer_create_confirm"
        android:layout_width="200dp"
        android:layout_height="fill_parent"
        android:layout_gravity="start"
        android:layout_marginTop="?attr/actionBarSize"/>
</android.support.v4.widget.DrawerLayout>
