<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_edit_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:fitsSystemWindows="true"
        tools:context=".CreateTrip.EditEventActivity">

        <include
            layout="@layout/toolbar_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="?attr/actionBarSize"
        tools:context=".CreateTrip.EditEventActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_event_site_name"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"/>

        <TextView
            android:id ="@+id/edit_start_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/edit_event_site_name"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"/>

        <Button
            android:id ="@+id/edit_start_time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:text= "@string/start_date_message"
            android:layout_below="@+id/edit_start_time_text"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"/>

        <TextView
            android:id ="@+id/edit_end_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_start_time_button"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"/>

        <Button
            android:id ="@+id/edit_end_time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:text="@string/end_date_message"
            android:layout_below="@+id/edit_end_time_text"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"/>

        <TextView
            android:id ="@+id/edit_event_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_end_time_button"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary" >

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ok_message"
                android:id="@+id/button_edit_event_confirm"
                android:background="@drawable/button_general"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    </RelativeLayout>

    </RelativeLayout>

    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         The drawer is given a fixed width in dp and extends the full height of
         the container. A solid background is used for contrast
         with the content view. -->
    <include
        layout="@layout/drawer_view"
        android:id="@+id/left_drawer_event_info"
        android:layout_width="200dp"
        android:layout_height="fill_parent"
        android:layout_gravity="start"
        android:layout_marginTop="?attr/actionBarSize"/>
</android.support.v4.widget.DrawerLayout>